<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<PreferenceCategory android:title="@string/locationSettings">

		<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
			android:key="first_preferencescreen" android:title="@string/firstPreferencescreenTitle">

			
		</PreferenceScreen>

	</PreferenceCategory>

	<PreferenceCategory android:title="@string/silentSettings">

		<CheckBoxPreference android:key="disable"
			android:title="@string/disableTitle"  android:defaultValue="false"

			android:summary="@string/disableSummary" />
		<ListPreference android:key="silentStart"
			android:title="@string/silentStartTitle" android:dialogTitle="@string/silentStartDlgTitle"
			android:entries="@array/silentStartEntry" android:summary="@string/silentStartSummary"
			android:entryValues="@array/silentStartEntryValues"
			android:defaultValue="0" />
		<ListPreference android:key="silentDuration"
			android:title="@string/silentDurationTitle" android:dialogTitle="@string/silentDurationDlgTitle"
			android:entries="@array/silentDurationEntry" android:summary="@string/silentDurationSummary"
			android:entryValues="@array/silentDurationEntryValues"
			android:defaultValue="20"/>
	</PreferenceCategory>

	<PreferenceCategory android:title="@string/generalSettings">
		<ListPreference android:key="notSound" android:title="@string/notSoundTitle"
			android:defaultValue="short" android:dialogTitle="@string/notSoundDlgTitle"
			android:entries="@array/notSoundEntry" android:entryValues="@array/notSoundValues" />
		<ListPreference android:key="mazhab" android:title="@string/mazhabTitle"
			android:dialogTitle="@string/mazhabDlgTitle" android:entries="@array/mazhab"
			android:defaultValue="Default" 
			android:entryValues="@array/mazhabValues" /> 
		<ListPreference android:key="calendar" android:title="@string/calcMethodTitle"
			android:dialogTitle="@string/calcMethodDlgTitle" android:entries="@array/calendarEntry"
			android:defaultValue="UmmAlQuraUniv" android:entryValues="@array/calendarValues"  />

		<ListPreference android:key="season" android:title="@string/seasonTitle"
			android:dialogTitle="@string/seasonDlgTitle" android:entries="@array/season"
			android:defaultValue="Winter" android:entryValues="@array/seasonValues" />
	</PreferenceCategory>

</PreferenceScreen>