<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:paddingTop="100dp"
    android:shrinkColumns="*"
    android:stretchColumns="*"
    android:weightSum="7" >

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="1"
        android:background="#77b2d74f"
        android:weightSum="2" >

        <TextView
            android:id="@+id/cityName"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal|center"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text=""
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold"
            android:width="0px" />

        <TextView
            android:id="@+id/cityLabel"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/citytxt"
            android:textColor="#FFFFFF"
            android:textSize="17dp"
            android:width="0px" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="1"
        android:background="#77b2d74f"
        android:weightSum="2" >

        <TextView
            android:id="@+id/remainingTime"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text=""
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            android:width="0px" />

        <TextView
            android:id="@+id/remainingText"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/remaintxt"
            android:textColor="#FFFFFF"
            android:textSize="17dp"
            android:width="0px" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:weightSum="2" >

        <TextView
            android:id="@+id/fajrTime"
            android:layout_width="0px"
            android:layout_height="fill_parent"
            android:layout_gravity="center_vertical|center_horizontal|center"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:layout_weight="1"
            android:background="#77b2d74f"
            android:gravity="center"
            android:text=""
            android:textColor="#2f3d0a"
            android:textSize="20dp"
            android:textStyle="bold"
            android:width="0px" />

        <TextView
            android:id="@+id/fajrTV"
            android:layout_width="0px"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:layout_weight="1"
            android:background="#77b2d74f"
            android:gravity="center"
            android:text="@string/fajrtxt"
            android:textColor="#2f3d0a"
            android:textSize="25dp"
            android:width="0px" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:weightSum="2" >

        <TextView
            android:id="@+id/duhrTime"
            android:layout_width="0px"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:layout_weight="1"
            android:background="#77b2d74f"
            android:gravity="center"
            android:text=""
            android:textColor="#2f3d0a"
            android:textSize="20sp"
            android:textStyle="bold"
            android:width="0px" />

        <TextView
            android:id="@+id/duhrTV"
            android:layout_width="0px"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:layout_weight="1"
            android:background="#77b2d74f"
            android:gravity="center"
            android:text="@string/duhrtxt"
            android:textColor="#2f3d0a"
            android:textSize="25dp"
            android:width="0px" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:weightSum="2" >

        <TextView
            android:id="@+id/asrTime"
            android:layout_width="0px"
            android:layout_height="fill_parent"
            android:layout_gravity="center_vertical|center_horizontal|center"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:layout_weight="1"
            android:background="#77b2d74f"
            android:gravity="center"
            android:text=""
            android:textColor="#2f3d0a"
            android:textSize="20sp"
            android:textStyle="bold"
            android:width="0px" />

        <TextView
            android:id="@+id/asrTV"
            android:layout_width="0px"
            android:layout_height="fill_parent"
            android:layout_gravity="center_vertical|center_horizontal|center"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:layout_weight="1"
            android:background="#77b2d74f"
            android:gravity="center"
            android:text="@string/asrtxt"
            android:textColor="#2f3d0a"
            android:textSize="25dp"
            android:width="0px" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:weightSum="2" >

        <TextView
            android:id="@+id/magribTime"
            android:layout_width="0px"
            android:layout_height="fill_parent"
            android:layout_gravity="center_vertical|center_horizontal|center"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:layout_weight="1"
            android:background="#77b2d74f"
            android:gravity="center"
            android:text=""
            android:textColor="#2f3d0a"
            android:textSize="20sp"
            android:textStyle="bold"
            android:width="0px" />

        <TextView
            android:id="@+id/magribTV"
            android:layout_width="0px"
            android:layout_height="fill_parent"
            android:layout_gravity="center_vertical|center_horizontal|center"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:layout_weight="1"
            android:background="#77b2d74f"
            android:gravity="center"
            android:text="@string/magribtxt"
            android:textColor="#2f3d0a"
            android:textSize="25dp"
            android:width="0px" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:weightSum="2" >

        <TextView
            android:id="@+id/ishaTime"
            android:layout_width="0px"
            android:layout_height="fill_parent"
            android:layout_gravity="center_vertical|center_horizontal|center"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:layout_weight="1"
            android:background="#77b2d74f"
            android:gravity="center"
            android:text=""
            android:textColor="#2f3d0a"
            android:textSize="20sp"
            android:textStyle="bold"
            android:width="0px" />

        <TextView
            android:id="@+id/ishaTV"
            android:layout_width="0px"
            android:layout_height="fill_parent"
            android:layout_gravity="center_vertical|center_horizontal|center"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:layout_weight="1"
            android:background="#77b2d74f"
            android:gravity="center"
            android:text="@string/ishatxt"
            android:textColor="#2f3d0a"
            android:textSize="25dp"
            android:width="0px" />
    </TableRow>

</TableLayout>